@@ -11,42 +11,33 @@ from os import path
 
 from apiclient import http
 from apiclient import discovery
+from apiclient.http import MediaInMemoryUpload
 
 from beancount.parser import options
 from beancount.utils import test_utils
 from beancount.docs import gauth
 
 
-def replace_gdocs_document(connection, doc_id, title, contents):
+def replace_gdocs_document(http, docid, title, contents):
     """Upload new contents for a Google Doc for a plain/text file.
 
     Args:
-      connection: An http connection object with drive credentials.
-      doc_id: A string, the ID of the document.
+      http: An http connection object with drive credentials.
+      docid: A string, the ID of the document.
       title: A string, the title of the document.
       contents: A string, the body of the document.
     """
-    # Create a media upload.
-    media_body = http.MediaInMemoryUpload(
-        contents.encode('utf8'), mimetype='text/plain', resumable=True)
-
-    # Connect, with authentication.
-    service = discovery.build('drive', 'v2', http=connection)
-    doc = service.files().get(fileId=doc_id).execute()
-
-    # Update the file metadata.
-    doc['title'] = title
-    doc['mimeType'] = 'text/plain'
-
-    # Send the request to the API.
-    updated_file = service.files().update(
-        fileId=doc_id,
-        body=doc,
-        media_body=media_body).execute()
-    return updated_file
+    service = discovery.build('drive', 'v3', http=http)
+    media = MediaInMemoryUpload(contents.encode('utf8'),
+                                mimetype='text/plain',
+                                resumable=True)
+    return service.files().update(
+        fileId=docid,
+        body=dict(name=title),
+        media_body=media).execute()
 
 
-def get_options_doc_id():
+def get_options_docid():
     """Find the options doc id from the redirect file.
 
     Returns:
@@ -66,16 +57,16 @@ def main():
     args = parser.parse_args()
 
     # Find the document id.
-    doc_id = get_options_doc_id()
+    docid = get_options_docid()
 
     # Connect to the service.
     scopes = ['https://www.googleapis.com/auth/drive',
               'https://www.googleapis.com/auth/drive.scripts']
-    connection = gauth.get_authenticated_http(scopes, args)
+    http = gauth.get_auth_via_service_account(scopes)
 
     # Replace the document.
-    replace_gdocs_document(connection,
-                           doc_id,
+    replace_gdocs_document(http,
+                           docid,
                            "Beancount - Options Reference",
                            options.list_options())
 
